--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,10 @@ ul {
     margin: 0;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
     padding: 0;
     margin: 0;
 }
@@ -129,7 +132,6 @@ body {
     font-weight: 500;
     color: #444;
     line-height: 22px;
-
     background: #fff;
     border-radius: 5px;
     position: relative;
@@ -137,6 +139,10 @@ body {
     margin: 0 0 10px 0;
     padding: 14px 100px 14px 14px;
     word-break: break-word;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 }
 
 .todo-item:last-of-type {
@@ -179,8 +185,8 @@ body {
 }
 
 .todo-remove {
-     background-image: url("../img/trash.png");
- }
+    background-image: url("../img/trash.png");
+}
 
 .todo-complete {
     background-image: url("../img/uncheck.png");
